cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
project(rapidxml_tests LANGUAGES CXX)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

enable_testing()

add_definitions(-DTIXML_USE_STL)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/..")

set(ALL_WARNINGS 0)
set(WARNINGS_AS_ERRORS 1)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    if(ALL_WARNINGS)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
    endif(ALL_WARNINGS)
    if(WARNINGS_AS_ERRORS)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /WX")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX")
    endif(WARNINGS_AS_ERRORS)
else()
    if(ALL_WARNINGS)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
    endif(ALL_WARNINGS)
    if(WARNINGS_AS_ERRORS)
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
    endif(WARNINGS_AS_ERRORS)
endif()

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_alignment")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_allocation_1")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_allocation_2")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_comparative")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_interface")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_invalid")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_multimodule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_no_exceptions")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_nodes")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_non_comparative")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_size")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_speed")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test_wchar")
